Add desig file